@@ -6,6 +6,7 @@ Date: ???
   Bug fixes:
     - Fixed normal productivity modules not working for higher quality recipes
     - Support creative-mod
+    - Fixed dark_background_icons on quality
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.8
 Date: 2023.11.11
